# kyndrylorderservice

./: .env.example  .gitattributes  .gitignore  Dockerfile  PR4_REVIEW.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt  simple_app.py
.github/: BADGES.md  CI_ENHANCEMENTS.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  analytics.py  health.py  orders.py
app/core/: config.py  validators.py
app/middleware/: __init__.py  security.py
app/models/: __init__.py  analytics.py  base.py  order.py
app/repositories/: __init__.py  base.py  order_repository.py
app/schemas/: __init__.py  analytics.py  order.py
app/services/: __init__.py  analytics_service.py  order_service.py
docs/: SECURITY.md
tests/: conftest.py
tests/unit/: __init__.py  test_analytics_api.py  test_analytics_service.py  test_main_security.py  test_order_model.py  test_order_service.py  test_schema_security.py  test_security_middleware.py  test_validators.py
